Fixing lqip overlay on small-screen

--- a/assets/styles/components/_common.scss
+++ b/assets/styles/components/_common.scss
@@ -8,12 +8,12 @@
 .grid-image:not(.not-lazyloaded) {
   &::before {
     top: 0;
+    left: 0;
+    right: 0;
     bottom: 0;
     opacity: 1;
     z-index: 2;
     content: '';
-    left: $padding-sm;
-    right: $padding-sm;
     position: absolute;
     pointer-events: none;
     transition: opacity 0.5s ease-out;
