--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -11,12 +11,12 @@ body.home {
         }
         &::before {
           top: 0;
+          left: 0;
+          right: 0;
           bottom: 0;
           opacity: 1;
           z-index: 2;
           content: '';
-          left: $padding-sm;
-          right: $padding-sm;
           position: absolute;
           pointer-events: none;
           transition: opacity 0.5s ease-out;
